--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "dependencies": {
+        "@prisma/client": "^6.18.0",
         "bcrypt": "^6.0.0",
         "dotenv": "^17.2.3",
         "express": "^5.1.0"
@@ -19,6 +20,7 @@
         "eslint": "^9.39.0",
         "nodemon": "^3.1.10",
         "prettier": "^3.6.2",
+        "prisma": "^6.18.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.9.3"
     }
