--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ dist-ssr
 *.local
 .env
 
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -26,3 +27,4 @@ dist-ssr
 
 # Prisma ORM
 /src/generated/prisma
+/prisma/
