--- a/package.json
+++ b/package.json
@@ -2,19 +2,28 @@
     "dependencies": {
         "@prisma/client": "^6.18.0",
         "bcrypt": "^6.0.0",
+        "cors": "^2.8.5",
         "dotenv": "^17.2.3",
-        "express": "^5.1.0"
+        "express": "^5.1.0",
+        "uuid": "^13.0.0"
     },
     "scripts": {
         "dev": "nodemon --watch src --exec ts-node src/app.ts",
         "build": "tsc",
-        "start": "node dist/app.js"
+        "start": "node dist/app.js",
+        "prisma:migrate": "prisma migrate dev --name",
+        "prisma:reset": "prisma migrate reset",
+        "prisma:generate": "prisma generate",
+        "prisma:deploy": "prisma migrate deploy",
+        "prisma:status": "prisma migrate status --schema=./schema.prisma"
     },
     "devDependencies": {
         "@eslint/js": "^9.39.0",
         "@types/bcrypt": "^6.0.0",
+        "@types/cors": "^2.8.19",
         "@types/dotenv": "^6.1.1",
         "@types/express": "^5.0.5",
+        "@types/uuid": "^10.0.0",
         "@typescript-eslint/eslint-plugin": "^8.46.2",
         "@typescript-eslint/parser": "^8.46.2",
         "eslint": "^9.39.0",
