--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.1.0",
+        "nodemailer": "^7.0.10",
         "uuid": "^13.0.0"
     },
     "scripts": {
@@ -23,6 +24,7 @@
         "@types/cors": "^2.8.19",
         "@types/dotenv": "^6.1.1",
         "@types/express": "^5.0.5",
+        "@types/nodemailer": "^7.0.3",
         "@types/uuid": "^10.0.0",
         "@typescript-eslint/eslint-plugin": "^8.46.2",
         "@typescript-eslint/parser": "^8.46.2",
