--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
     "dependencies": {
         "@prisma/client": "^6.18.0",
+        "@reduxjs/toolkit": "^2.10.0",
         "bcrypt": "^6.0.0",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.1.0",
         "nodemailer": "^7.0.10",
+        "react-redux": "^9.2.0",
         "uuid": "^13.0.0"
     },
     "scripts": {
@@ -21,6 +24,7 @@
     "devDependencies": {
         "@eslint/js": "^9.39.0",
         "@types/bcrypt": "^6.0.0",
+        "@types/cookie-parser": "^1.4.10",
         "@types/cors": "^2.8.19",
         "@types/dotenv": "^6.1.1",
         "@types/express": "^5.0.5",
