--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.1.0",
+        "jsonwebtoken": "^9.0.2",
         "node-cron": "^4.2.1",
         "nodemailer": "^7.0.10",
+        "prisma": "^6.18.0",
         "react-redux": "^9.2.0",
         "uuid": "^13.0.0"
     },
@@ -25,11 +27,13 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.39.0",
+        "@prisma/dev": "^0.15.0",
         "@types/bcrypt": "^6.0.0",
         "@types/cookie-parser": "^1.4.10",
         "@types/cors": "^2.8.19",
         "@types/dotenv": "^6.1.1",
         "@types/express": "^5.0.5",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/nodemailer": "^7.0.3",
         "@types/uuid": "^10.0.0",
         "@typescript-eslint/eslint-plugin": "^8.46.2",
@@ -37,7 +41,6 @@
         "eslint": "^9.39.0",
         "nodemon": "^3.1.10",
         "prettier": "^3.6.2",
-        "prisma": "^6.18.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.9.3"
     }
