--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.1.0",
+        "google-auth-library": "^10.5.0",
         "jsonwebtoken": "^9.0.2",
         "node-cron": "^4.2.1",
         "nodemailer": "^7.0.10",
@@ -38,6 +39,7 @@
         "@types/uuid": "^10.0.0",
         "@typescript-eslint/eslint-plugin": "^8.46.2",
         "@typescript-eslint/parser": "^8.46.2",
+        "axios": "^1.13.2",
         "eslint": "^9.39.0",
         "nodemon": "^3.1.10",
         "prettier": "^3.6.2",
